--- a/arch/arm64/configs/cust_defconfig
+++ b/arch/arm64/configs/cust_defconfig
@@ -367,6 +367,7 @@ CONFIG_QPNP_SMB5=y
 CONFIG_SMB1390_CHARGE_PUMP_PSY=y
 CONFIG_SMB1398_CHARGER=y
 CONFIG_THERMAL=y
+CONFIG_THERMAL_SWITCH=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_THERMAL_GOV_LOW_LIMITS=y
